Lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> if
Rule 8     instruction -> if ;
Rule 9     instruction -> return
Rule 10    instruction -> return ;
Rule 11    instruction -> break
Rule 12    instruction -> break ;
Rule 13    instruction -> continue
Rule 14    instruction -> continue ;
Rule 15    instruction -> for_loop
Rule 16    instruction -> for_loop ;
Rule 17    instruction -> while_loop
Rule 18    instruction -> while_loop ;
Rule 19    instruction -> assignment
Rule 20    instruction -> assignment ;
Rule 21    instruction -> print
Rule 22    instruction -> print ;
Rule 23    if -> IF ( expression ) instruction
Rule 24    if -> IF ( expression ) instruction ELSE instruction
Rule 25    break -> BREAK
Rule 26    continue -> CONTINUE
Rule 27    while_loop -> WHILE ( expression ) instruction
Rule 28    for_loop -> FOR id = expression : expression instruction
Rule 29    return -> RETURN expression
Rule 30    return -> RETURN
Rule 31    print -> PRINT ( list_for_print )
Rule 32    print -> PRINT list_for_print
Rule 33    list_for_print -> expression , list_for_print
Rule 34    list_for_print -> expression
Rule 35    expression -> var
Rule 36    expression -> ( expression )
Rule 37    expression -> int
Rule 38    expression -> float
Rule 39    expression -> string
Rule 40    int -> INTNUM
Rule 41    float -> FLOATNUM
Rule 42    string -> STRING
Rule 43    var -> id
Rule 44    id -> ID
Rule 45    var -> id [ mat_func_args ]
Rule 46    assignment -> var = expression
Rule 47    assignment -> var ADDASSIGN expression
Rule 48    assignment -> var SUBASSIGN expression
Rule 49    assignment -> var MULASSIGN expression
Rule 50    assignment -> var DIVASSIGN expression
Rule 51    expression -> expression '
Rule 52    expression -> - expression
Rule 53    expression -> expression + expression
Rule 54    expression -> expression - expression
Rule 55    expression -> expression * expression
Rule 56    expression -> expression / expression
Rule 57    expression -> expression DOTADD expression
Rule 58    expression -> expression DOTSUB expression
Rule 59    expression -> expression DOTMUL expression
Rule 60    expression -> expression DOTDIV expression
Rule 61    expression -> expression < expression
Rule 62    expression -> expression > expression
Rule 63    expression -> expression LESSEQ expression
Rule 64    expression -> expression MOREEQ expression
Rule 65    expression -> expression EQUAL expression
Rule 66    expression -> expression NOTEQUAL expression
Rule 67    expression -> matrix
Rule 68    matrix -> [ matrix ]
Rule 69    matrix -> [ sub_string_1 ]
Rule 70    matrix -> [ sub_string_1 , matrix ]
Rule 71    sub_string_1 -> sub_string_1 , expression
Rule 72    sub_string_1 -> expression
Rule 73    expression -> matrix_creation ( mat_func_args )
Rule 74    mat_func_args -> mat_func_args , expression
Rule 75    mat_func_args -> expression
Rule 76    matrix_creation -> ZEROS
Rule 77    matrix_creation -> ONES
Rule 78    matrix_creation -> EYE

Terminals, with rules where they appear

'                    : 51
(                    : 23 24 27 31 36 73
)                    : 23 24 27 31 36 73
*                    : 55
+                    : 53
,                    : 33 70 71 74
-                    : 52 54
/                    : 56
:                    : 28
;                    : 8 10 12 14 16 18 20 22
<                    : 61
=                    : 28 46
>                    : 62
ADDASSIGN            : 47
BREAK                : 25
CONTINUE             : 26
DIVASSIGN            : 50
DOTADD               : 57
DOTDIV               : 60
DOTMUL               : 59
DOTSUB               : 58
ELSE                 : 24
EQUAL                : 65
EYE                  : 78
FLOATNUM             : 41
FOR                  : 28
ID                   : 44
IF                   : 23 24
INTNUM               : 40
LESSEQ               : 63
MOREEQ               : 64
MULASSIGN            : 49
NOTEQUAL             : 66
ONES                 : 77
PRINT                : 31 32
RETURN               : 29 30
STRING               : 42
SUBASSIGN            : 48
WHILE                : 27
ZEROS                : 76
[                    : 45 68 69 70
]                    : 45 68 69 70
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignment           : 19 20
break                : 11 12
continue             : 13 14
expression           : 23 24 27 28 28 29 33 34 36 46 47 48 49 50 51 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 71 72 74 75
float                : 38
for_loop             : 15 16
id                   : 28 43 45
if                   : 7 8
instruction          : 4 5 23 24 24 27 28
instructions         : 2 4 6
instructions_opt     : 1
int                  : 37
list_for_print       : 31 32 33
mat_func_args        : 45 73 74
matrix               : 67 68 70
matrix_creation      : 73
print                : 21 22
program              : 0
return               : 9 10
string               : 39
sub_string_1         : 69 70 71
var                  : 35 46 47 48 49 50
while_loop           : 17 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . if ;
    (9) instruction -> . return
    (10) instruction -> . return ;
    (11) instruction -> . break
    (12) instruction -> . break ;
    (13) instruction -> . continue
    (14) instruction -> . continue ;
    (15) instruction -> . for_loop
    (16) instruction -> . for_loop ;
    (17) instruction -> . while_loop
    (18) instruction -> . while_loop ;
    (19) instruction -> . assignment
    (20) instruction -> . assignment ;
    (21) instruction -> . print
    (22) instruction -> . print ;
    (23) if -> . IF ( expression ) instruction
    (24) if -> . IF ( expression ) instruction ELSE instruction
    (29) return -> . RETURN expression
    (30) return -> . RETURN
    (25) break -> . BREAK
    (26) continue -> . CONTINUE
    (28) for_loop -> . FOR id = expression : expression instruction
    (27) while_loop -> . WHILE ( expression ) instruction
    (46) assignment -> . var = expression
    (47) assignment -> . var ADDASSIGN expression
    (48) assignment -> . var SUBASSIGN expression
    (49) assignment -> . var MULASSIGN expression
    (50) assignment -> . var DIVASSIGN expression
    (31) print -> . PRINT ( list_for_print )
    (32) print -> . PRINT list_for_print
    (43) var -> . id
    (45) var -> . id [ mat_func_args ]
    (44) id -> . ID

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 5
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    PRINT           shift and go to state 22
    ID              shift and go to state 23

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    return                         shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    id                             shift and go to state 19
    var                            shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . if ;
    (9) instruction -> . return
    (10) instruction -> . return ;
    (11) instruction -> . break
    (12) instruction -> . break ;
    (13) instruction -> . continue
    (14) instruction -> . continue ;
    (15) instruction -> . for_loop
    (16) instruction -> . for_loop ;
    (17) instruction -> . while_loop
    (18) instruction -> . while_loop ;
    (19) instruction -> . assignment
    (20) instruction -> . assignment ;
    (21) instruction -> . print
    (22) instruction -> . print ;
    (23) if -> . IF ( expression ) instruction
    (24) if -> . IF ( expression ) instruction ELSE instruction
    (29) return -> . RETURN expression
    (30) return -> . RETURN
    (25) break -> . BREAK
    (26) continue -> . CONTINUE
    (28) for_loop -> . FOR id = expression : expression instruction
    (27) while_loop -> . WHILE ( expression ) instruction
    (46) assignment -> . var = expression
    (47) assignment -> . var ADDASSIGN expression
    (48) assignment -> . var SUBASSIGN expression
    (49) assignment -> . var MULASSIGN expression
    (50) assignment -> . var DIVASSIGN expression
    (31) print -> . PRINT ( list_for_print )
    (32) print -> . PRINT list_for_print
    (43) var -> . id
    (45) var -> . id [ mat_func_args ]
    (44) id -> . ID

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 5
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    PRINT           shift and go to state 22
    ID              shift and go to state 23

    instruction                    shift and go to state 24
    if                             shift and go to state 6
    return                         shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    id                             shift and go to state 19
    var                            shift and go to state 21

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . if ;
    (9) instruction -> . return
    (10) instruction -> . return ;
    (11) instruction -> . break
    (12) instruction -> . break ;
    (13) instruction -> . continue
    (14) instruction -> . continue ;
    (15) instruction -> . for_loop
    (16) instruction -> . for_loop ;
    (17) instruction -> . while_loop
    (18) instruction -> . while_loop ;
    (19) instruction -> . assignment
    (20) instruction -> . assignment ;
    (21) instruction -> . print
    (22) instruction -> . print ;
    (23) if -> . IF ( expression ) instruction
    (24) if -> . IF ( expression ) instruction ELSE instruction
    (29) return -> . RETURN expression
    (30) return -> . RETURN
    (25) break -> . BREAK
    (26) continue -> . CONTINUE
    (28) for_loop -> . FOR id = expression : expression instruction
    (27) while_loop -> . WHILE ( expression ) instruction
    (46) assignment -> . var = expression
    (47) assignment -> . var ADDASSIGN expression
    (48) assignment -> . var SUBASSIGN expression
    (49) assignment -> . var MULASSIGN expression
    (50) assignment -> . var DIVASSIGN expression
    (31) print -> . PRINT ( list_for_print )
    (32) print -> . PRINT list_for_print
    (43) var -> . id
    (45) var -> . id [ mat_func_args ]
    (44) id -> . ID

    {               shift and go to state 5
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    PRINT           shift and go to state 22
    ID              shift and go to state 23

    instructions                   shift and go to state 25
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    return                         shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    id                             shift and go to state 19
    var                            shift and go to state 21

state 6

    (7) instruction -> if .
    (8) instruction -> if . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    }               reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)
    ;               shift and go to state 26

  ! ;               [ reduce using rule 7 (instruction -> if .) ]


state 7

    (9) instruction -> return .
    (10) instruction -> return . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 9 (instruction -> return .)
    IF              reduce using rule 9 (instruction -> return .)
    RETURN          reduce using rule 9 (instruction -> return .)
    BREAK           reduce using rule 9 (instruction -> return .)
    CONTINUE        reduce using rule 9 (instruction -> return .)
    FOR             reduce using rule 9 (instruction -> return .)
    WHILE           reduce using rule 9 (instruction -> return .)
    PRINT           reduce using rule 9 (instruction -> return .)
    ID              reduce using rule 9 (instruction -> return .)
    $end            reduce using rule 9 (instruction -> return .)
    }               reduce using rule 9 (instruction -> return .)
    ELSE            reduce using rule 9 (instruction -> return .)
    ;               shift and go to state 27

  ! ;               [ reduce using rule 9 (instruction -> return .) ]


state 8

    (11) instruction -> break .
    (12) instruction -> break . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 11 (instruction -> break .)
    IF              reduce using rule 11 (instruction -> break .)
    RETURN          reduce using rule 11 (instruction -> break .)
    BREAK           reduce using rule 11 (instruction -> break .)
    CONTINUE        reduce using rule 11 (instruction -> break .)
    FOR             reduce using rule 11 (instruction -> break .)
    WHILE           reduce using rule 11 (instruction -> break .)
    PRINT           reduce using rule 11 (instruction -> break .)
    ID              reduce using rule 11 (instruction -> break .)
    $end            reduce using rule 11 (instruction -> break .)
    }               reduce using rule 11 (instruction -> break .)
    ELSE            reduce using rule 11 (instruction -> break .)
    ;               shift and go to state 28

  ! ;               [ reduce using rule 11 (instruction -> break .) ]


state 9

    (13) instruction -> continue .
    (14) instruction -> continue . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 13 (instruction -> continue .)
    IF              reduce using rule 13 (instruction -> continue .)
    RETURN          reduce using rule 13 (instruction -> continue .)
    BREAK           reduce using rule 13 (instruction -> continue .)
    CONTINUE        reduce using rule 13 (instruction -> continue .)
    FOR             reduce using rule 13 (instruction -> continue .)
    WHILE           reduce using rule 13 (instruction -> continue .)
    PRINT           reduce using rule 13 (instruction -> continue .)
    ID              reduce using rule 13 (instruction -> continue .)
    $end            reduce using rule 13 (instruction -> continue .)
    }               reduce using rule 13 (instruction -> continue .)
    ELSE            reduce using rule 13 (instruction -> continue .)
    ;               shift and go to state 29

  ! ;               [ reduce using rule 13 (instruction -> continue .) ]


state 10

    (15) instruction -> for_loop .
    (16) instruction -> for_loop . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 15 (instruction -> for_loop .)
    IF              reduce using rule 15 (instruction -> for_loop .)
    RETURN          reduce using rule 15 (instruction -> for_loop .)
    BREAK           reduce using rule 15 (instruction -> for_loop .)
    CONTINUE        reduce using rule 15 (instruction -> for_loop .)
    FOR             reduce using rule 15 (instruction -> for_loop .)
    WHILE           reduce using rule 15 (instruction -> for_loop .)
    PRINT           reduce using rule 15 (instruction -> for_loop .)
    ID              reduce using rule 15 (instruction -> for_loop .)
    $end            reduce using rule 15 (instruction -> for_loop .)
    }               reduce using rule 15 (instruction -> for_loop .)
    ELSE            reduce using rule 15 (instruction -> for_loop .)
    ;               shift and go to state 30

  ! ;               [ reduce using rule 15 (instruction -> for_loop .) ]


state 11

    (17) instruction -> while_loop .
    (18) instruction -> while_loop . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 17 (instruction -> while_loop .)
    IF              reduce using rule 17 (instruction -> while_loop .)
    RETURN          reduce using rule 17 (instruction -> while_loop .)
    BREAK           reduce using rule 17 (instruction -> while_loop .)
    CONTINUE        reduce using rule 17 (instruction -> while_loop .)
    FOR             reduce using rule 17 (instruction -> while_loop .)
    WHILE           reduce using rule 17 (instruction -> while_loop .)
    PRINT           reduce using rule 17 (instruction -> while_loop .)
    ID              reduce using rule 17 (instruction -> while_loop .)
    $end            reduce using rule 17 (instruction -> while_loop .)
    }               reduce using rule 17 (instruction -> while_loop .)
    ELSE            reduce using rule 17 (instruction -> while_loop .)
    ;               shift and go to state 31

  ! ;               [ reduce using rule 17 (instruction -> while_loop .) ]


state 12

    (19) instruction -> assignment .
    (20) instruction -> assignment . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 19 (instruction -> assignment .)
    IF              reduce using rule 19 (instruction -> assignment .)
    RETURN          reduce using rule 19 (instruction -> assignment .)
    BREAK           reduce using rule 19 (instruction -> assignment .)
    CONTINUE        reduce using rule 19 (instruction -> assignment .)
    FOR             reduce using rule 19 (instruction -> assignment .)
    WHILE           reduce using rule 19 (instruction -> assignment .)
    PRINT           reduce using rule 19 (instruction -> assignment .)
    ID              reduce using rule 19 (instruction -> assignment .)
    $end            reduce using rule 19 (instruction -> assignment .)
    }               reduce using rule 19 (instruction -> assignment .)
    ELSE            reduce using rule 19 (instruction -> assignment .)
    ;               shift and go to state 32

  ! ;               [ reduce using rule 19 (instruction -> assignment .) ]


state 13

    (21) instruction -> print .
    (22) instruction -> print . ;

  ! shift/reduce conflict for ; resolved as shift
    {               reduce using rule 21 (instruction -> print .)
    IF              reduce using rule 21 (instruction -> print .)
    RETURN          reduce using rule 21 (instruction -> print .)
    BREAK           reduce using rule 21 (instruction -> print .)
    CONTINUE        reduce using rule 21 (instruction -> print .)
    FOR             reduce using rule 21 (instruction -> print .)
    WHILE           reduce using rule 21 (instruction -> print .)
    PRINT           reduce using rule 21 (instruction -> print .)
    ID              reduce using rule 21 (instruction -> print .)
    $end            reduce using rule 21 (instruction -> print .)
    }               reduce using rule 21 (instruction -> print .)
    ELSE            reduce using rule 21 (instruction -> print .)
    ;               shift and go to state 33

  ! ;               [ reduce using rule 21 (instruction -> print .) ]


state 14

    (23) if -> IF . ( expression ) instruction
    (24) if -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 34


state 15

    (29) return -> RETURN . expression
    (30) return -> RETURN .
    (35) expression -> . var
    (36) expression -> . ( expression )
    (37) expression -> . int
    (38) expression -> . float
    (39) expression -> . string
    (51) expression -> . expression '
    (52) expression -> . - expression
    (53) expression -> . expression + expression
    (54) expression -> . expression - expression
    (55) expression -> . expression * expression
    (56) expression -> . expression / expression
    (57) expression -> . expression DOTADD expression
    (58) expression -> . expression DOTSUB expression
    (59) expression -> . expression DOTMUL expression
    (60) expression -> . expression DOTDIV expression
    (61) expression -> . expression < expression
    (62) expression -> . expression > expression
    (63) expression -> . expression LESSEQ expression
    (64) expression -> . expression MOREEQ expression
    (65) expression -> . expression EQUAL expression
    (66) expression -> . expression NOTEQUAL expression
    (67) expression -> . matrix
    (73) expression -> . matrix_creation ( mat_func_args )
    (43) var -> . id
    (45) var -> . id [ mat_func_args ]
    (40) int -> . INTNUM
    (41) float -> . FLOATNUM
    (42) string -> . STRING
    (68) matrix -> . [ matrix ]
    (69) matrix -> . [ sub_string_1 ]
    (70) matrix -> . [ sub_string_1 , matrix ]
    (76) matrix_creation -> . ZEROS
    (77) matrix_creation -> . ONES
    (78) matrix_creation -> . EYE
    (44) id -> . ID

  ! shift/reduce conflict for ID resolved as shift
    ;               reduce using rule 30 (return -> RETURN .)
    {               reduce using rule 30 (return -> RETURN .)
    IF              reduce using rule 30 (return -> RETURN .)
    RETURN          reduce using rule 30 (return -> RETURN .)
    BREAK           reduce using rule 30 (return -> RETURN .)
    CONTINUE        reduce using rule 30 (return -> RETURN .)
    FOR             reduce using rule 30 (return -> RETURN .)
    WHILE           reduce using rule 30 (return -> RETURN .)
    PRINT           reduce using rule 30 (return -> RETURN .)
    $end            reduce using rule 30 (return -> RETURN .)
    }               reduce using rule 30 (return -> RETURN .)
    ELSE            reduce using rule 30 (return -> RETURN .)
    (               shift and go to state 37
    -               shift and go to state 41
    INTNUM          shift and go to state 45
    FLOATNUM        shift and go to state 46
    STRING          shift and go to state 47
    [               shift and go to state 44
    ZEROS           shift and go to state 48
    ONES            shift and go to state 49
    EYE             shift and go to state 50
    ID              shift and go to state 23

  ! ID              [ reduce using rule 30 (return -> RETURN .) ]

    expression                     shift and go to state 35
    var                            shift and go to state 36
    int                            shift and go to state 38
    float                          shift and go to state 39
    string                         shift and go to state 40
    matrix                         shift and go to state 42
    matrix_creation                shift and go to state 43
    id                             shift and go to state 19

state 16

    (25) break -> BREAK .

    ;               reduce using rule 25 (break -> BREAK .)
    {               reduce using rule 25 (break -> BREAK .)
    IF              reduce using rule 25 (break -> BREAK .)
    RETURN          reduce using rule 25 (break -> BREAK .)
    BREAK           reduce using rule 25 (break -> BREAK .)
    CONTINUE        reduce using rule 25 (break -> BREAK .)
    FOR             reduce using rule 25 (break -> BREAK .)
    WHILE           reduce using rule 25 (break -> BREAK .)
    PRINT           reduce using rule 25 (break -> BREAK .)
    ID              reduce using rule 25 (break -> BREAK .)
    $end            reduce using rule 25 (break -> BREAK .)
    }               reduce using rule 25 (break -> BREAK .)
    ELSE            reduce using rule 25 (break -> BREAK .)


state 17

    (26) continue -> CONTINUE .

    ;               reduce using rule 26 (continue -> CONTINUE .)
    {               reduce using rule 26 (continue -> CONTINUE .)
    IF              reduce using rule 26 (continue -> CONTINUE .)
    RETURN          reduce using rule 26 (continue -> CONTINUE .)
    BREAK           reduce using rule 26 (continue -> CONTINUE .)
    CONTINUE        reduce using rule 26 (continue -> CONTINUE .)
    FOR             reduce using rule 26 (continue -> CONTINUE .)
    WHILE           reduce using rule 26 (continue -> CONTINUE .)
    PRINT           reduce using rule 26 (continue -> CONTINUE .)
    ID              reduce using rule 26 (continue -> CONTINUE .)
    $end            reduce using rule 26 (continue -> CONTINUE .)
    }               reduce using rule 26 (continue -> CONTINUE .)
    ELSE            reduce using rule 26 (continue -> CONTINUE .)


state 18

    (28) for_loop -> FOR . id = expression : expression instruction
    (44) id -> . ID

    ID              shift and go to state 23

    id                             shift and go to state 51

state 19

    (43) var -> id .
    (45) var -> id . [ mat_func_args ]

    =               reduce using rule 43 (var -> id .)
    ADDASSIGN       reduce using rule 43 (var -> id .)
    SUBASSIGN       reduce using rule 43 (var -> id .)
    MULASSIGN       reduce using rule 43 (var -> id .)
    DIVASSIGN       reduce using rule 43 (var -> id .)
    '               reduce using rule 43 (var -> id .)
    +               reduce using rule 43 (var -> id .)
    -               reduce using rule 43 (var -> id .)
    *               reduce using rule 43 (var -> id .)
    /               reduce using rule 43 (var -> id .)
    DOTADD          reduce using rule 43 (var -> id .)
    DOTSUB          reduce using rule 43 (var -> id .)
    DOTMUL          reduce using rule 43 (var -> id .)
    DOTDIV          reduce using rule 43 (var -> id .)
    <               reduce using rule 43 (var -> id .)
    >               reduce using rule 43 (var -> id .)
    LESSEQ          reduce using rule 43 (var -> id .)
    MOREEQ          reduce using rule 43 (var -> id .)
    EQUAL           reduce using rule 43 (var -> id .)
    NOTEQUAL        reduce using rule 43 (var -> id .)
    ;               reduce using rule 43 (var -> id .)
    {               reduce using rule 43 (var -> id .)
    IF              reduce using rule 43 (var -> id .)
    RETURN          reduce using rule 43 (var -> id .)
    BREAK           reduce using rule 43 (var -> id .)
    CONTINUE        reduce using rule 43 (var -> id .)
    FOR             reduce using rule 43 (var -> id .)
    WHILE           reduce using rule 43 (var -> id .)
    PRINT           reduce using rule 43 (var -> id .)
    ID              reduce using rule 43 (var -> id .)
    $end            reduce using rule 43 (var -> id .)
    }               reduce using rule 43 (var -> id .)
    ELSE            reduce using rule 43 (var -> id .)
    ,               reduce using rule 43 (var -> id .)
    )               reduce using rule 43 (var -> id .)
    ]               reduce using rule 43 (var -> id .)
    :               reduce using rule 43 (var -> id .)
    [               shift and go to state 52


state 20

    (27) while_loop -> WHILE . ( expression ) instruction

    (               shift and go to state 53


state 21

    (46) assignment -> var . = expression
    (47) assignment -> var . ADDASSIGN expression
    (48) assignment -> var . SUBASSIGN expression
    (49) assignment -> var . MULASSIGN expression
    (50) assignment -> var . DIVASSIGN expression

    =               shift and go to state 54
    ADDASSIGN       shift and go to state 55
    SUBASSIGN       shift and go to state 56
    MULASSIGN       shift and go to state 57
    DIVASSIGN       shift and go to state 58


state 22

    (31) print -> PRINT . ( list_for_print )
    (32) print -> PRINT . list_for_print
    (33) list_for_print -> . expression , list_for_print
    (34) list_for_print -> . expression
    (35) expression -> . var
    (36) expression -> . ( expression )
    (37) expression -> . int
    (38) expression -> . float
    (39) expression -> . string
    (51) expression -> . expression '
    (52) expression -> . - expression
    (53) expression -> . expression + expression
    (54) expression -> . expression - expression
    (55) expression -> . expression * expression
    (56) expression -> . expression / expression
    (57) expression -> . expression DOTADD expression
    (58) expression -> . expression DOTSUB expression
    (59) expression -> . expression DOTMUL expression
    (60) expression -> . expression DOTDIV expression
    (61) expression -> . expression < expression
    (62) expression -> . expression > expression
    (63) expression -> . expression LESSEQ expression
    (64) expression -> . expression MOREEQ expression
    (65) expression -> . expression EQUAL expression
    (66) expression -> . expression NOTEQUAL expression
    (67) expression -> . matrix
    (73) expression -> . matrix_creation ( mat_func_args )
    (43) var -> . id
    (45) var -> . id [ mat_func_args ]
    (40) int -> . INTNUM
    (41) float -> . FLOATNUM
    (42) string -> . STRING
    (68) matrix -> . [ matrix ]
    (69) matrix -> . [ sub_string_1 ]
    (70) matrix -> . [ sub_string_1 , matrix ]
    (76) matrix_creation -> . ZEROS
    (77) matrix_creation -> . ONES
    (78) matrix_creation -> . EYE
    (44) id -> . ID

    (               shift and go to state 59
    -               shift and go to state 41
    INTNUM          shift and go to state 45
    FLOATNUM        shift and go to state 46
    STRING          shift and go to state 47
    [               shift and go to state 44
    ZEROS           shift and go to state 48
    ONES            shift and go to state 49
    EYE             shift and go to state 50
    ID              shift and go to state 23

    list_for_print                 shift and go to state 60
    expression                     shift and go to state 61
    var                            shift and go to state 36
    int                            shift and go to state 38
    float                          shift and go to state 39
    string                         shift and go to state 40
    matrix                         shift and go to state 42
    matrix_creation                shift and go to state 43
    id                             shift and go to state 19

state 23

    (44) id -> ID .

    [               reduce using rule 44 (id -> ID .)
    =               reduce using rule 44 (id -> ID .)
    ADDASSIGN       reduce using rule 44 (id -> ID .)
    SUBASSIGN       reduce using rule 44 (id -> ID .)
    MULASSIGN       reduce using rule 44 (id -> ID .)
    DIVASSIGN       reduce using rule 44 (id -> ID .)
    '               reduce using rule 44 (id -> ID .)
    +               reduce using rule 44 (id -> ID .)
    -               reduce using rule 44 (id -> ID .)
    *               reduce using rule 44 (id -> ID .)
    /               reduce using rule 44 (id -> ID .)
    DOTADD          reduce using rule 44 (id -> ID .)
    DOTSUB          reduce using rule 44 (id -> ID .)
    DOTMUL          reduce using rule 44 (id -> ID .)
    DOTDIV          reduce using rule 44 (id -> ID .)
    <               reduce using rule 44 (id -> ID .)
    >               reduce using rule 44 (id -> ID .)
    LESSEQ          reduce using rule 44 (id -> ID .)
    MOREEQ          reduce using rule 44 (id -> ID .)
    EQUAL           reduce using rule 44 (id -> ID .)
    NOTEQUAL        reduce using rule 44 (id -> ID .)
    ;               reduce using rule 44 (id -> ID .)
    {               reduce using rule 44 (id -> ID .)
    IF              reduce using rule 44 (id -> ID .)
    RETURN          reduce using rule 44 (id -> ID .)
    BREAK           reduce using rule 44 (id -> ID .)
    CONTINUE        reduce using rule 44 (id -> ID .)
    FOR             reduce using rule 44 (id -> ID .)
    WHILE           reduce using rule 44 (id -> ID .)
    PRINT           reduce using rule 44 (id -> ID .)
    ID              reduce using rule 44 (id -> ID .)
    $end            reduce using rule 44 (id -> ID .)
    }               reduce using rule 44 (id -> ID .)
    ELSE            reduce using rule 44 (id -> ID .)
    ,               reduce using rule 44 (id -> ID .)
    )               reduce using rule 44 (id -> ID .)
    ]               reduce using rule 44 (id -> ID .)
    :               reduce using rule 44 (id -> ID .)


state 24

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 25

    (6) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . if ;
    (9) instruction -> . return
    (10) instruction -> . return ;
    (11) instruction -> . break
    (12) instruction -> . break ;
    (13) instruction -> . continue
    (14) instruction -> . continue ;
    (15) instruction -> . for_loop
    (16) instruction -> . for_loop ;
    (17) instruction -> . while_loop
    (18) instruction -> . while_loop ;
    (19) instruction -> . assignment
    (20) instruction -> . assignment ;
    (21) instruction -> . print
    (22) instruction -> . print ;
    (23) if -> . IF ( expression ) instruction
    (24) if -> . IF ( expression ) instruction ELSE instruction
    (29) return -> . RETURN expression
    (30) return -> . RETURN
    (25) break -> . BREAK
    (26) continue -> . CONTINUE
    (28) for_loop -> . FOR id = expression : expression instruction
    (27) while_loop -> . WHILE ( expression ) instruction
    (46) assignment -> . var = expression
    (47) assignment -> . var ADDASSIGN expression
    (48) assignment -> . var SUBASSIGN expression
    (49) assignment -> . var MULASSIGN expression
    (50) assignment -> . var DIVASSIGN expression
    (31) print -> . PRINT ( list_for_print )
    (32) print -> . PRINT list_for_print
    (43) var -> . id
    (45) var -> . id [ mat_func_args ]
    (44) id -> . ID
